-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6.0 Beta1
-
None
-
-
e8724c87c (6.6), 4d963586f (dev)
The generator in qtgrpc has a special case to convert google.protobuf.Timestamp to and from QDateTime. This code still uses the std::shared_ptr approach and has not been updated to the new QExplicitlySharedDataPointer approach.
Reported_by_support_standard