Re-enable google.protobuf.Timestamp support in well-know types

Enable google.protobuf.Timestamp in well-know types. Add extra
methods that allow convert the generated class from/to QDateTime.

Task-number: QTBUG-114972
Task-number: QTBUG-112430
Change-Id: I00a6878cdd0461f9f0938dd5fa284743df0d8dc8
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>